// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPhoneInput should render correctly 1`] = `
<span
  className="bpk-phone-input"
>
  <fieldset
    className="bpk-fieldset bpk-phone-input__dialing-code"
  >
    <label
      className="bpk-label"
      htmlFor="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid={false}
      aria-required={false}
      className="bpk-select dialing-code"
      disabled={false}
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      onChange={[Function]}
      value="44"
    >
      <option
        value="44"
      >
        +44
      </option>
      <option
        value="55"
      >
        +55
      </option>
    </select>
  </fieldset>
  <fieldset
    className="bpk-fieldset bpk-phone-input__phone-number"
  >
    <label
      className="bpk-label"
      htmlFor="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      className="bpk-input fancy-input"
      disabled={false}
      id="phone-input-id"
      name="Telephone input"
      onChange={[Function]}
      type="number"
      value="1234"
    />
  </fieldset>
</span>
`;

exports[`BpkPhoneInput should render correctly with a "disabled" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <fieldset
    className="bpk-fieldset bpk-phone-input__dialing-code"
  >
    <label
      className="bpk-label"
      htmlFor="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid={false}
      aria-required={false}
      className="bpk-select dialing-code"
      disabled={false}
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      onChange={[Function]}
      value="44"
    >
      <option
        value="44"
      >
        +44
      </option>
      <option
        value="55"
      >
        +55
      </option>
    </select>
  </fieldset>
  <fieldset
    className="bpk-fieldset bpk-phone-input__phone-number"
  >
    <label
      className="bpk-label"
      htmlFor="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      className="bpk-input fancy-input"
      disabled={false}
      id="phone-input-id"
      name="Telephone input"
      onChange={[Function]}
      type="number"
      value="1234"
    />
  </fieldset>
</span>
`;

exports[`BpkPhoneInput should render correctly with a "large" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <fieldset
    className="bpk-fieldset bpk-phone-input__dialing-code"
  >
    <label
      className="bpk-label"
      htmlFor="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid={false}
      aria-required={false}
      className="bpk-select bpk-select--large dialing-code"
      disabled={false}
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      onChange={[Function]}
      value="44"
    >
      <option
        value="44"
      >
        +44
      </option>
      <option
        value="55"
      >
        +55
      </option>
    </select>
  </fieldset>
  <fieldset
    className="bpk-fieldset bpk-phone-input__phone-number"
  >
    <label
      className="bpk-label"
      htmlFor="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      className="bpk-input bpk-input--large fancy-input"
      disabled={false}
      id="phone-input-id"
      name="Telephone input"
      onChange={[Function]}
      type="number"
      value="1234"
    />
  </fieldset>
</span>
`;

exports[`BpkPhoneInput should render correctly with a "valid" attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <fieldset
    className="bpk-fieldset bpk-phone-input__dialing-code"
  >
    <label
      className="bpk-label"
      htmlFor="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid={false}
      aria-required={false}
      className="bpk-select dialing-code"
      disabled={false}
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      onChange={[Function]}
      value="44"
    >
      <option
        value="44"
      >
        +44
      </option>
      <option
        value="55"
      >
        +55
      </option>
    </select>
  </fieldset>
  <fieldset
    className="bpk-fieldset bpk-phone-input__phone-number"
  >
    <label
      className="bpk-label"
      htmlFor="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      className="bpk-input bpk-input--valid fancy-input"
      disabled={false}
      id="phone-input-id"
      name="Telephone input"
      onChange={[Function]}
      type="number"
      value="1234"
    />
  </fieldset>
</span>
`;

exports[`BpkPhoneInput should render correctly with a "wrapperProps" attribute 1`] = `
<span
  aria-label="container"
  className="bpk-phone-input container"
>
  <fieldset
    className="bpk-fieldset bpk-phone-input__dialing-code"
  >
    <label
      className="bpk-label"
      htmlFor="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid={false}
      aria-required={false}
      className="bpk-select dialing-code"
      disabled={false}
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      onChange={[Function]}
      value="44"
    >
      <option
        value="44"
      >
        +44
      </option>
      <option
        value="55"
      >
        +55
      </option>
    </select>
  </fieldset>
  <fieldset
    className="bpk-fieldset bpk-phone-input__phone-number"
  >
    <label
      className="bpk-label"
      htmlFor="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      className="bpk-input fancy-input"
      disabled={false}
      id="phone-input-id"
      name="Telephone input"
      onChange={[Function]}
      type="number"
      value="1234"
    />
  </fieldset>
</span>
`;

exports[`BpkPhoneInput should render correctly with a dialing code image attribute 1`] = `
<span
  className="bpk-phone-input"
>
  <fieldset
    className="bpk-fieldset bpk-phone-input__dialing-code"
  >
    <label
      className="bpk-label"
      htmlFor="dialing-code"
    >
      Dialing code
    </label>
    <div
      className="bpk-select-wrapper dialing-wrapper"
    >
      <span
        className="bpk-select-wrapper__image"
      />
      <select
        aria-invalid={false}
        aria-required={false}
        className="bpk-select bpk-select--with-image dialing-code"
        disabled={false}
        id="dialing-code"
        label="Dialing code"
        name="Dialing code"
        onChange={[Function]}
        value="44"
      >
        <option
          value="44"
        >
          +44
        </option>
        <option
          value="55"
        >
          +55
        </option>
      </select>
    </div>
  </fieldset>
  <fieldset
    className="bpk-fieldset bpk-phone-input__phone-number"
  >
    <label
      className="bpk-label"
      htmlFor="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid={false}
      aria-required={false}
      className="bpk-input fancy-input"
      disabled={false}
      id="phone-input-id"
      name="Telephone input"
      onChange={[Function]}
      type="number"
      value="1234"
    />
  </fieldset>
</span>
`;
